add status to project
